--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -67,8 +67,7 @@ body {
   }
 
   &.dark-mode {
-    // background-color: $dark-gray;
-    background-color: $primary-color-darker !important;
+    background-color: $dark-gray;
     color: $neutral-gray;
   }
 
@@ -89,6 +88,7 @@ body {
     }
   }
   &.blue {
+    background-color: $dark-gray-blue !important;
     .MuiPickersDay-root.Mui-selected,
     .css-r75yrr-MuiButtonBase-root-MuiButton-root,
     .swiper-pagination-bullet-active {
@@ -102,6 +102,7 @@ body {
     }
   }
   &.red {
+    background-color: $dark-gray-red !important;
     .MuiPickersDay-root.Mui-selected,
     .css-r75yrr-MuiButtonBase-root-MuiButton-root,
     .swiper-pagination-bullet-active {
@@ -115,6 +116,7 @@ body {
     }
   }
   &.yellow {
+    background-color: $dark-gray-yellow !important;
     .MuiPickersDay-root.Mui-selected,
     .css-r75yrr-MuiButtonBase-root-MuiButton-root,
     .swiper-pagination-bullet-active {
@@ -128,6 +130,7 @@ body {
     }
   }
   &.green {
+    background-color: $dark-gray-green !important;
     .MuiPickersDay-root.Mui-selected,
     .css-r75yrr-MuiButtonBase-root-MuiButton-root,
     .swiper-pagination-bullet-active {
@@ -141,6 +144,7 @@ body {
     }
   }
   &.orange {
+    background-color: $dark-gray-orange !important;
     .MuiPickersDay-root.Mui-selected,
     .css-r75yrr-MuiButtonBase-root-MuiButton-root,
     .swiper-pagination-bullet-active {
@@ -154,6 +158,7 @@ body {
     }
   }
   &.deepPurple {
+    background-color: $dark-gray-deep-purple !important;
     .MuiPickersDay-root.Mui-selected,
     .css-r75yrr-MuiButtonBase-root-MuiButton-root,
     .swiper-pagination-bullet-active {
@@ -167,6 +172,7 @@ body {
     }
   }
   &.purple {
+    background-color: $dark-gray-purple !important;
     .MuiPickersDay-root.Mui-selected,
     .css-r75yrr-MuiButtonBase-root-MuiButton-root,
     .swiper-pagination-bullet-active {
@@ -180,6 +186,7 @@ body {
     }
   }
   &.pink {
+    background-color: $dark-gray-pink !important;
     .MuiPickersDay-root.Mui-selected,
     .css-r75yrr-MuiButtonBase-root-MuiButton-root,
     .swiper-pagination-bullet-active {
