--- a/src/assets/styles/setup/variables.scss
+++ b/src/assets/styles/setup/variables.scss
@@ -155,6 +155,33 @@ $darker-gray-purple: #160f17; // lighter (card background) - total RGB: 54
 $dark-gray-pink: #120a0e; // darker (main background) - total RGB: 42
 $darker-gray-pink: #190f15; // lighter (card background) - total RGB: 61
 
+// Neutral (global)
+$menu-bg: #0f2a2c;
+
+// Blue
+$menu-bg-blue: #0e1a27;
+
+// Yellow
+$menu-bg-yellow: #1a190f;
+
+// Red
+$menu-bg-red: #1a1112;
+
+// Orange
+$menu-bg-orange: #1a150f;
+
+// Green
+$menu-bg-green: #0e1b17;
+
+// Deep Purple
+$menu-bg-deep-purple: #141126;
+
+// Purple
+$menu-bg-purple: #150f19;
+
+// Pink
+$menu-bg-pink: #180f16;
+
 $neutral-gray: #f5f5f5;
 
 $white: #fff;
