Update route icon, add AppHeader to Signin screen

--- a/src/CustomMui/SignIn/styles/SignIn.scss
+++ b/src/CustomMui/SignIn/styles/SignIn.scss
@@ -1,4 +1,5 @@
 .login-sign-up-container {
+  margin-top: $header-margin;
   div {
     max-height: calc(100vh - 79.32px - 174.59px);
     min-height: fit-content;
