Add WorkoutCard, WorkoutsList cmps

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -72,6 +72,8 @@
 @import '../../components/LiftMate/MuscleGroupCard/styles/MuscleGroupCard.scss';
 @import '../../pages/LiftMate/EditWorkout/styles/EditWorkout.scss';
 @import '../../pages/LiftMate/Workouts/styles/Workouts.scss';
+@import '../../pages/LiftMate/Workouts/styles/WorkoutCard.scss';
+@import '../../pages/LiftMate/Workouts/styles/WorkoutsList.scss';
 @import '../../pages/LiftMate/Session/styles/Session.scss';
 @import '../../pages/LiftMate/Progress/styles/Progress.scss';
 
