Make WorkoutsList CustomBasicList

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -82,6 +82,7 @@
 @import '../../CustomMui/CustomToggle/styles/CustomToggle.scss';
 @import '../../CustomMui/CustomInput/styles/CustomInput.scss';
 @import '../../CustomMui/CustomList/styles/CustomList.scss';
+@import '../../CustomMui/CustomBasicList/styles/CustomBasicList.scss';
 @import '../../CustomMui/CustomSelect/styles/CustomSelect.scss';
 @import '../../CustomMui/CustomLinearProgress/styles/CustomLinearProgress.scss';
 @import '../../CustomMui/CustomAccordion/styles/CustomAccordion.scss';
