--- a/src/pages/LiftMate/Workouts/styles/WorkoutCard.scss
+++ b/src/pages/LiftMate/Workouts/styles/WorkoutCard.scss
@@ -1,7 +1,16 @@
 .workout-card-container {
-  padding: 1rem;
+  display: grid;
+  padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 0 0.5rem 0 rgba(0, 0, 0, 0.1);
+
+  width: calc(100vw - 2rem);
+
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   &.dark-mode {
     color: $white;
