--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -90,6 +90,7 @@
 @import '../../CustomMui/CustomDatePicker/styles/CustomDatePicker.scss';
 @import '../../CustomMui/CustomStepper/styles/CustomStepper.scss';
 @import '../../CustomMui/CustomAlertDialog/styles/CustomAlertDialog.scss';
+@import '../../CustomMui/CustomOptionsMenu/styles/CustomOptionsMenu.scss';
 
 @import 'react-circular-progressbar/dist/styles.css';
 @import 'rc-slider/assets/index.css';
