--- a/src/CustomMui/CustomOptionsMenu/styles/CustomOptionsMenu.scss
+++ b/src/CustomMui/CustomOptionsMenu/styles/CustomOptionsMenu.scss
@@ -4,4 +4,10 @@
       color: $white;
     }
   }
+  .option-menu-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1em;
+  }
 }
