Add StyledMenu to CustomOptions

--- a/src/CustomMui/CustomOptionsMenu/styles/CustomOptionsMenu.scss
+++ b/src/CustomMui/CustomOptionsMenu/styles/CustomOptionsMenu.scss
@@ -3,6 +3,11 @@
     ul {
       color: $white;
     }
+    .option-menu-item {
+      svg {
+        fill: $white;
+      }
+    }
   }
   .option-menu-item {
     display: flex;
