--- a/src/CustomMui/CustomStepper/styles/CustomStepper.scss
+++ b/src/CustomMui/CustomStepper/styles/CustomStepper.scss
@@ -1,8 +1,8 @@
 .custom-stepper {
   display: grid;
-  grid-template-rows: auto auto 1fr auto;
+  // grid-template-rows: auto auto 1fr auto;
   gap: 0.5rem;
-  padding: 1rem;
+  // padding: 1rem;
 
   .custom-stepper-stage {
     min-height: 180px;
@@ -11,6 +11,7 @@
   .custom-stepper-footer {
     display: grid;
     gap: 0.5rem;
+    padding: 0 1rem;
 
     .buttons-container {
       display: grid;
